--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 click==8.0.3
 colorama==0.4.4
+dnspython==2.1.0
 Flask==2.0.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+numpy==1.21.4
 pymongo==3.12.1
 Werkzeug==2.0.2
